frontend: fix map minzoom and maxzoom, align map with page

--- a/heatmaps/static/css/main.sass
+++ b/heatmaps/static/css/main.sass
@@ -1,2 +1,12 @@
-#map
+#map-holder
+    position: relative
     height: 100%
+    width: 100%
+    
+#map
+    position: absolute
+    bottom: 0
+    right: 0
+    height: 85%
+    width: 70%
+    
